# templates

./: README.md  run_test.sh
lib_template/: cookiecutter.json
lib_template/{{ cookiecutter.project_name }}/: Dockerfile  README.md  docker-compose.yml  justfile  noxfile.py  pyproject.toml
lib_template/{{ cookiecutter.project_name }}/.github/workflows/: python-linter.yml  python-publish.yml
lib_template/{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}/: __init__.py  _{{ cookiecutter.project_name }}.py
lib_template/{{ cookiecutter.project_name }}/tests/: test_simple.py  test_{{ cookiecutter.project_name}}.py
