[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "samplerpoject"
authors = [
  { name="{{ cookiecutter.author }}" },
]
requires-python = ">=3.{{ cookiecutter.python_3_version }}"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/{{ cookiecutter.author }}/{{ cookiecutter.project_name }}"
"Bug Tracker" = "https://github.com/{{ cookiecutter.author }}/{{ cookiecutter.project_name }}/issues"


[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.version]
path = "src/{{ cookiecutter.project_name }}/_version.py"


[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_name }}"]

[tool.ruff]
line-length = 120
target-version = 'py3{{ cookiecutter.python_3_version}}'

[tool.ruff.lint.isort]
known-local-folder=["{{ cookiecutter.project_name }}", "tests"]

[tool.mypy]
python_version = "3.{{ cookiecutter.python_3_version }}"
strict = true
show_error_codes = true


